--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mysql": "2.11.1",
     "waterline-cursor": "^0.0.7",
     "waterline-errors": "0.10.1",
-    "waterline-sequel": "0.6.4"
+    "waterline-sequel": "jekkihun/waterline-sequel"
   },
   "devDependencies": {
     "mocha": "3.0.2",
